--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -13,3 +13,18 @@
 
 // Custom
 @import "custom";
+
+//DateTimepicker
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  border: 0;
+}
+
+@import "bower_components/eonasdan-bootstrap-datetimepicker/src/sass/_bootstrap-datetimepicker";
